# ai-pipeline-thin

./: README.md  __init__.py  demo_download.py  demo_v3.py  docs_interaction_jobs_experiment.md  pyproject.toml  run.py
ai_pipeline/: __init__.py  available_models.py  celery_app_experimental.py  dependency_diagnostics.py  generate_ids.py  generated_ids.py  hardware_acceleration.py  interaction_job_manager.py  interaction_job_manager_celery.py  interaction_job_manager_huey.py  interaction_job_manager_registry.py  interaction_job_record.py  interaction_job_registry_celery.py  interaction_persistence_runner.py  interaction_service.py  interaction_tasks_celery.py  interface_gateway.py  interfaces.py  messages.py  model_download_service.py  model_inputs.py  model_loader.py  model_name.py  ollama_health_service.py  ollama_interaction_service.py  ollama_server_service.py  pipeline.py  prompt.py  request.py  response.py  text.py  tokenizer_loader.py  upstream_error.py
ai_pipeline/models/: .gitignore
ai_pipeline_thin/: __init__.py
docs/: ai_pipeline_v0_1_contract.md
tests/: test_dependency_diagnostics.py  test_hardware_acceleration.py  test_interaction_jobs.py  test_interaction_service.py  test_interfaces.py  test_model_download_service.py  test_model_loader.py  test_ollama_services.py  test_packaging_imports.py
